deploy/k8s/overlays/test/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goadmin
spec:
  replicas: 1
