deploy/k8s/overlays/test/patch-ingress.json
[
  {
    "op": "replace",
    "path": "/spec/rules/0/host",
    "value": "goadmin-test.local"
  }
]
