deploy/k8s/overlays/test/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goadmin
spec:
  rules:
    - host: goadmin-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            server:
              service:
                name: goadmin
                port:
                  name: http
